# isaac-spinning-up

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/motions/: csv_to_npz.py  pkl_to_csv.py  replay_npz.py
scripts/rsl_rl/: play.py  train.py
source/humanoid_motion_tracking/: setup.py
source/humanoid_motion_tracking/config/: extension.toml
source/humanoid_motion_tracking/docs/: CHANGELOG.rst
source/humanoid_motion_tracking/humanoid_motion_tracking/: ui_extension_example.py
source/humanoid_motion_tracking/humanoid_motion_tracking/tasks/manager_based/humanoid_motion_tracking/: humanoid_motion_tracking_env_cfg.py
source/motion_tracking/: setup.py
source/motion_tracking/config/: extension.toml
source/motion_tracking/data/motions/csv/: g1_spinkick.csv
source/motion_tracking/data/unitree_g1/urdf/: main.urdf
source/motion_tracking/data/unitree_g1/usd/: config.yaml
source/motion_tracking/docs/: CHANGELOG.rst
source/motion_tracking/motion_tracking/: __init__.py
source/motion_tracking/motion_tracking/assets/: __init__.py  g1.py
source/motion_tracking/motion_tracking/dataset/: __init__.py  motion_loader.py
source/motion_tracking/motion_tracking/tasks/motion_tracking/: __init__.py  motion_tracking_env_cfg.py
source/motion_tracking/motion_tracking/tasks/motion_tracking/agents/: __init__.py  rsl_rl_ppo_cfg.py
source/motion_tracking/motion_tracking/tasks/motion_tracking/mdp/: events.py  observations.py  rewards.py  terminations.py  utils.py
source/motion_tracking/motion_tracking/tasks/motion_tracking/mdp/commands/: __init__.py  motion_command.py  motion_command_cfg.py
